feat: add schedule update and deploy workflow

--- a/TrangCaNhan.html
+++ b/TrangCaNhan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card - Nghia2k4</title>
+    <title>Sang thứ 4 ca 2git add .</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/styleCN/style.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="card__img">
             <img src="images/2004.jpg" alt="Avatar">
         </div>
-        <h2>nghiaphamhuu</h2>
+        <h2>Sáng Thứ 4 Ca 2</h2>
        
         <div class="card__social">
             <a target="_blank" href="https://www.facebook.com/your-profile">
