--- a/TrangCaNhan.html
+++ b/TrangCaNhan.html
@@ -13,7 +13,7 @@
         <div class="card__img">
             <img src="images/2004.jpg" alt="Avatar">
         </div>
-        <h2>Sáng Thứ 4 Ca 2</h2>
+        <h2>Xin Chào</h2>
        
         <div class="card__social">
             <a target="_blank" href="https://www.facebook.com/your-profile">
